<?xml version="1.0"?>
<package format="2">
  <name>motor_ros</name>
  <version>0.0.0</version>
  <description>The motor_ros package</description>

  <maintainer email="kookyour52@gmail.com">ubuntu</maintainer>

  <license>MIT</license>

  <author email="kookyour52@gmail.com">Theo Kanning</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
